# jaguilar_embedded_2017

./: README.md
assignment_1/BumpItUp/: README
assignment_1/meta-tec/: README.md
assignment_1/rgb2yuv_c/: Makefile  README  config.h  config.h.in  config.status  configure  configure.ac  install-sh
assignment_1/rgb2yuv_c/autom4te.cache/: output.1  requests  traces.0  traces.1
assignment_1/rgb2yuv_c/doc/: Makefile  information.h
assignment_1/rgb2yuv_c/doc_backup/: Doxygen  Makefile  information.h
assignment_1/rgb2yuv_c/src/: .rgb2yuv_c.c.swo  .rgb2yuv_c.c.swp  Makefile  Makefile.am  Makefile.in  gmon.out  image.yuv  rgb2yuv_c  rgb2yuv_c.c
assignment_1/rgb2yuv_intrinsics/: Makefile  Makefile.in  README  config.status  configure  configure.ac
assignment_1/rgb2yuv_intrinsics/autom4te.cache/: output.1  requests  traces.1
assignment_1/rgb2yuv_intrinsics/doc/: information.h
assignment_1/rgb2yuv_intrinsics/doc/html/: files.html
assignment_1/rgb2yuv_intrinsics/src/: Makefile  Makefile.am  Makefile.in  rgb2yuv_intrinsics  rgb2yuv_intrinsics.c
assignment_1/rgb2yuv_intrinsics/src/.deps/: rgb2yuv_intrinsics-rgb2yuv_intrinsics.Po
assignment_1/rgb2yuv_neon/: Makefile  config.h  config.h.in  config.status  configure  configure.ac
assignment_1/rgb2yuv_neon/autom4te.cache/: output.0  output.1  (+2 more)
assignment_2/conv/: .conv.ko.cmd  .conv.mod.o.cmd  Makefile  conv.ko  conv.mod.c  modules.order  run_make.sh
assignment_2/other_files/: load_conv.sh  rpi_console_text.txt
assignment_3/Doc/: main.tex
assignment_3/Results/: part1.txt  part_2_column.txt  part_2_row.txt
(+126 files in other folders)
